--- a/apps/dashboard/src/app/account/account-manage/account-delete/account-delete.component.html
+++ b/apps/dashboard/src/app/account/account-manage/account-delete/account-delete.component.html
@@ -5,24 +5,32 @@
   <pa-modal-content>
     <div>
       <pa-checkbox [(value)]="deleteAccount">
-        {{ 'account.delete_account_confirm' | translate:{ account: (account | async)?.title } }}
+        {{ 'account.delete_account_confirm' | translate: { account: (account | async)?.title } }}
       </pa-checkbox>
     </div>
-    <div class="delete-user"
-         *ngIf="showDeleteUser">
+    <div
+      class="delete-user"
+      *ngIf="showDeleteUser">
       <label for="group-delete-user">{{ 'account.delete_user_confirm' | translate }}</label>
-      <pa-radio-group [(value)]="deleteUser"
-                      id="group-delete-user">
+      <pa-radio-group
+        [(value)]="deleteUser"
+        id="group-delete-user">
         <pa-radio value="yes">{{ 'generic.yes' | translate }}</pa-radio>
         <pa-radio value="no">{{ 'generic.no' | translate }}</pa-radio>
       </pa-radio-group>
     </div>
   </pa-modal-content>
   <pa-modal-footer>
-    <pa-button aspect="basic"
-               (click)="modal.close()">{{ 'pastanaga.cancel' | translate}}</pa-button>
-    <pa-button kind="destructive"
-               [disabled]="!deleteAccount || (showDeleteUser && deleteUser === undefined)"
-               (click)="modal.close({ deleteUser: deleteUser === 'yes' })">{{ 'generic.delete' | translate}}</pa-button>
+    <pa-button
+      aspect="basic"
+      (click)="modal.close()">
+      {{ 'pastanaga.cancel' | translate }}
+    </pa-button>
+    <pa-button
+      kind="destructive"
+      [disabled]="!deleteAccount || (showDeleteUser && deleteUser === undefined)"
+      (click)="modal.close({ deleteUser: deleteUser === 'yes' })">
+      {{ 'generic.delete' | translate }}
+    </pa-button>
   </pa-modal-footer>
 </pa-modal-dialog>
