--- a/apps/dashboard/src/app/account/billing/billing.component.html
+++ b/apps/dashboard/src/app/account/billing/billing.component.html
@@ -1,4 +1,7 @@
-<stf-section-navbar [title]="'Billing'" [routes]="(routes | async) || []" [hasInnerRoutes]="true">
+<stf-section-navbar
+  [title]="'Billing'"
+  [routes]="(routes | async) || []"
+  [hasInnerRoutes]="true">
   <stf-section-navbar-body>
     <router-outlet></router-outlet>
   </stf-section-navbar-body>
