--- a/apps/dashboard/src/app/components/charts/bar-chart/bar-chart.component.html
+++ b/apps/dashboard/src/app/components/charts/bar-chart/bar-chart.component.html
@@ -1,10 +1,12 @@
-<div class="bar-chart" #container [id]="id">
+<div
+  class="bar-chart"
+  #container
+  [id]="id">
   <div
     class="tooltip"
     [style.opacity]="showTooltip ? '1' : '0'"
     [style.bottom.px]="tooltipBottom"
-    [style.left.px]="tooltipLeft"
-  >
+    [style.left.px]="tooltipLeft">
     {{ tooltipContent | number: undefined:locale }}
   </div>
 </div>
