--- a/apps/dashboard/src/app/components/hint/hint.component.html
+++ b/apps/dashboard/src/app/components/hint/hint.component.html
@@ -1,7 +1,8 @@
-<div class="hint"
-     #container
-     [class.inverted]="inverted"
-     [style.max-width]="containerWidth">
+<div
+  class="hint"
+  #container
+  [class.inverted]="inverted"
+  [style.max-width]="containerWidth">
   <pa-expander card>
     <pa-expander-header>
       <div class="hint-title">
