--- a/apps/dashboard/src/app/components/label/label-list/label-list.component.scss
+++ b/apps/dashboard/src/app/components/label/label-list/label-list.component.scss
@@ -1,11 +1,11 @@
-@import "variables";
+@import 'variables';
 
 .label-list {
   display: flex;
   flex-wrap: wrap;
 
   pa-chip-closeable {
-    margin-bottom: rhythm(.5);
-    margin-right: rhythm(.5);
+    margin-bottom: rhythm(0.5);
+    margin-right: rhythm(0.5);
   }
 }
