--- a/apps/dashboard/src/app/components/token-dialog/token-dialog.component.html
+++ b/apps/dashboard/src/app/components/token-dialog/token-dialog.component.html
@@ -1,14 +1,28 @@
 <div class="token-dialog">
   <h1>{{ 'account.new_token' | translate }}</h1>
-  <pa-button class="close-button"
-             icon="cross"
-             aspect="basic"
-             (click)="close()">{{'generic.close' | translate}}</pa-button>
+  <pa-button
+    class="close-button"
+    icon="cross"
+    aspect="basic"
+    (click)="close()">
+    {{ 'generic.close' | translate }}
+  </pa-button>
 
-  <div class="mb-48" [innerHTML]="'account.token_description' | translate"></div>
-  <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
-    <div class="token-dialog-value" fxFlex="1 1 0">{{ data.token | slice: 1:30 }}...</div>
-    <div *ngIf="clipboardSuppordted" fxFlex="0 0 auto">
+  <div
+    class="mb-48"
+    [innerHTML]="'account.token_description' | translate"></div>
+  <div
+    fxLayout="row"
+    fxLayoutAlign="start center"
+    fxLayoutGap="10px">
+    <div
+      class="token-dialog-value"
+      fxFlex="1 1 0">
+      {{ data.token | slice: 1:30 }}...
+    </div>
+    <div
+      *ngIf="clipboardSuppordted"
+      fxFlex="0 0 auto">
       <pa-button (click)="copy()">
         {{ (successMessage ? 'generic.copied' : 'generic.copy') | translate }}
       </pa-button>
