--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-home/knowledge-box-home.component.html
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-home/knowledge-box-home.component.html
@@ -1,26 +1,27 @@
 <div class="knowledge-box-home">
   <div class="container get-started">
-    <div class="title-m">
-      {{ 'stats.get_started' | translate }}.
-    </div>
+    <div class="title-m">{{ 'stats.get_started' | translate }}.</div>
     <div class="title-m subtitle">{{ 'stats.endpoint' | translate }}</div>
 
     <div class="endpoint">{{ endpoint | async }}</div>
   </div>
 
   <div class="home-main-layout">
-    <div *ngIf="isAccountManager | async"
-         class="left-column">
+    <div
+      *ngIf="isAccountManager | async"
+      class="left-column">
       <div class="container chart-container">
         <div class="chart-header">
           <div class="title-m">{{ 'stats.total_search' | translate }}</div>
-          <div *ngIf="locale | async as loc"
-               class="display-m">
+          <div
+            *ngIf="locale | async as loc"
+            class="display-m">
             {{ totalSearch | async | number: '1.0-0':loc }}
           </div>
         </div>
-        <app-empty-chart *ngIf="!(search | async)"
-                         [numLines]="6"></app-empty-chart>
+        <app-empty-chart
+          *ngIf="!(search | async)"
+          [numLines]="6"></app-empty-chart>
         <app-line-chart [data]="(search | async) || []"></app-line-chart>
       </div>
 
@@ -28,17 +29,20 @@
         <div class="chart-header">
           <div class="title-m">{{ 'stats.processing_time' | translate }}</div>
         </div>
-        <app-empty-chart *ngIf="!(processing | async)"
-                         [numLines]="3"></app-empty-chart>
+        <app-empty-chart
+          *ngIf="!(processing | async)"
+          [numLines]="3"></app-empty-chart>
         <app-bar-chart [data]="(processing | async) || []"></app-bar-chart>
       </div>
     </div>
 
-    <div *ngIf="isKbAdmin | async"
-         class="right-column">
+    <div
+      *ngIf="isKbAdmin | async"
+      class="right-column">
       <div class="container state-container">
         <div class="title-m">
-          {{ 'stash.state' | translate }}: <span class="state">{{ stateLabel | async }}</span>
+          {{ 'stash.state' | translate }}:
+          <span class="state">{{ stateLabel | async }}</span>
         </div>
         <pa-button (click)="toggleKbState()">
           {{ ((isPublished | async) ? 'account.stash.retire' : 'account.stash.publish') | translate }}
@@ -48,39 +52,43 @@
       <div class="container resource-stats">
         <div class="title-m">
           {{ 'stats.total.title' | translate }}
-          <pa-button aspect="basic"
-                     icon="refresh"
-                     size="small"
-                     [disabled]="(refreshing | async) === true"
-                     (click)="refresh()">
-            {{'account.stash.refresh_counters' | translate}}
+          <pa-button
+            aspect="basic"
+            icon="refresh"
+            size="small"
+            [disabled]="(refreshing | async) === true"
+            (click)="refresh()">
+            {{ 'account.stash.refresh_counters' | translate }}
           </pa-button>
         </div>
         <div *ngIf="locale | async as loc">
-          <div class="total-resources">{{ (counters | async)?.resources | number:'1.0-0':loc }}</div>
+          <div class="total-resources">{{ (counters | async)?.resources | number: '1.0-0':loc }}</div>
           <dl>
             <dt>{{ 'stats.total.fields' | translate }}</dt>
-            <dd>{{ (counters | async)?.fields | number:'1.0-0':loc }}</dd>
+            <dd>{{ (counters | async)?.fields | number: '1.0-0':loc }}</dd>
 
             <dt>{{ 'stats.total.paragraphs' | translate }}</dt>
-            <dd>{{ (counters | async)?.paragraphs | number:'1.0-0':loc }}</dd>
+            <dd>{{ (counters | async)?.paragraphs | number: '1.0-0':loc }}</dd>
 
             <dt>{{ 'stats.total.sentences' | translate }}</dt>
-            <dd>{{ (counters | async)?.sentences | number:'1.0-0':loc }}</dd>
+            <dd>{{ (counters | async)?.sentences | number: '1.0-0':loc }}</dd>
           </dl>
         </div>
       </div>
 
-      <div class="container go-to-desktop"
-           *ngIf="isDownloadDesktopEnabled | async">
-        <img src="assets/nuclia-desktop-white.svg"
-             alt="Nuclia Desktop" />
+      <div
+        class="container go-to-desktop"
+        *ngIf="isDownloadDesktopEnabled | async">
+        <img
+          src="assets/nuclia-desktop-white.svg"
+          alt="Nuclia Desktop" />
         <p>{{ 'stash.desktop.description' | translate }}</p>
         <div class="desktop-button">
-          <pa-button kind="inverted"
-                     icon="download-cloud"
-                     iconAndText
-                     (click)="downloadDesktop()">
+          <pa-button
+            kind="inverted"
+            icon="download-cloud"
+            iconAndText
+            (click)="downloadDesktop()">
             {{ 'stash.desktop.button' | translate }}
           </pa-button>
           <p>
