--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-manage/knowledge-box-manage.component.html
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-manage/knowledge-box-manage.component.html
@@ -1,6 +1,7 @@
-<stf-section-navbar [title]="'stash.settings'"
-                    [routes]="routes"
-                    [hasInnerRoutes]="true">
+<stf-section-navbar
+  [title]="'stash.settings'"
+  [routes]="routes"
+  [hasInnerRoutes]="true">
   <stf-section-navbar-body class="knowledge-box-manage">
     <router-outlet></router-outlet>
   </stf-section-navbar-body>
