--- a/apps/dashboard/src/app/knowledge-box/knowledge-box/knowledge-box.component.html
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box/knowledge-box.component.html
@@ -1,4 +1,6 @@
-<div class="upload-bar-container" *ngIf="showBar | async">
+<div
+  class="upload-bar-container"
+  *ngIf="showBar | async">
   <app-upload-bar></app-upload-bar>
 </div>
 
