--- a/apps/dashboard/src/app/setup/setup-account/setup-account.component.html
+++ b/apps/dashboard/src/app/setup/setup-account/setup-account.component.html
@@ -1,34 +1,43 @@
 <div class="top-bar">
-  <svg-icon src="assets/logos/logo-beta.svg" class="logo"></svg-icon>
+  <svg-icon
+    src="assets/logos/logo-beta.svg"
+    class="logo"></svg-icon>
 </div>
 
 <div class="setup-account">
   <header *ngIf="user | async as user">
-    <h1>{{ 'setup.create_account' | translate: {user} }}</h1>
+    <h1>{{ 'setup.create_account' | translate: { user } }}</h1>
   </header>
   <main>
     <div class="col-left">
       <div class="box">
         <h2 [class.mute]="!!createdKb">{{ 'setup.account_preferences' | translate }}</h2>
-        <form *ngIf="!createdKb"
-              [formGroup]="accountForm"
-              (ngSubmit)="save()">
+        <form
+          *ngIf="!createdKb"
+          [formGroup]="accountForm"
+          (ngSubmit)="save()">
           <div class="field">
-            <div class="description"><strong>{{ 'setup.name_account' | translate }}</strong></div>
-            <pa-input id="account"
-                      name="account"
-                      formControlName="account"
-                      hasFocus
-                      [errorMessages]="validationMessages.account">
-              {{'account.title' | translate}}
+            <div class="description">
+              <strong>{{ 'setup.name_account' | translate }}</strong>
+            </div>
+            <pa-input
+              id="account"
+              name="account"
+              formControlName="account"
+              hasFocus
+              [errorMessages]="validationMessages.account">
+              {{ 'account.title' | translate }}
             </pa-input>
           </div>
           <div class="field">
-            <div class="description" [innerHtml]="'setup.kb_created' | translate"></div>
-            <pa-input name="kb"
-                      formControlName="kb"
-                      [errorMessages]="validationMessages.kb">
-              {{'stash.name' | translate}}
+            <div
+              class="description"
+              [innerHtml]="'setup.kb_created' | translate"></div>
+            <pa-input
+              name="kb"
+              formControlName="kb"
+              [errorMessages]="validationMessages.kb">
+              {{ 'stash.name' | translate }}
             </pa-input>
           </div>
           <div class="field">
@@ -36,13 +45,17 @@
               <strong>{{ 'setup.data_storage' | translate }}</strong>
             </div>
             <pa-radio-group formControlName="zone">
-              <pa-radio *ngFor="let zone of zones"
-                        [value]="zone.id">{{ zone.title }}</pa-radio>
+              <pa-radio
+                *ngFor="let zone of zones"
+                [value]="zone.id">
+                {{ zone.title }}
+              </pa-radio>
             </pa-radio-group>
           </div>
-          <pa-button type="submit"
-                     kind="primary"
-                     [disabled]="loading">
+          <pa-button
+            type="submit"
+            kind="primary"
+            [disabled]="loading">
             {{ 'generic.create' | translate }}
           </pa-button>
         </form>
@@ -57,13 +70,15 @@
             href="https://docs.nuclia.dev/docs/quick-start/push#api-push-contents-using-the-api"
             target="_blank"
             class="doc-link"
-            rel="noopener noreferrer"
-          >
+            rel="noopener noreferrer">
             {{ 'setup.upload_using_api' | translate }}
           </a>
           <p>
             …or just visit a
-            <a class="demo-link" [routerLink]="'/at/' + createdAccount + '/__demo'" target="_blank">
+            <a
+              class="demo-link"
+              [routerLink]="'/at/' + createdAccount + '/__demo'"
+              target="_blank">
               <strong>demo knowledge box</strong>
             </a>
             with existing contents.
