--- a/apps/dashboard/src/app/account/account-kbs/account-kbs.component.html
+++ b/apps/dashboard/src/app/account/account-kbs/account-kbs.component.html
@@ -1,62 +1,75 @@
-<div class="loading-shade" *ngIf="isLoading">
+<div
+  class="loading-shade"
+  *ngIf="isLoading">
   <mat-spinner></mat-spinner>
 </div>
-<div *ngIf="zones && account && knowledgeBoxes"
-     class="account-kbs">
+<div
+  *ngIf="zones && account && knowledgeBoxes"
+  class="account-kbs">
   <h2>{{ 'account.related_kbs' | translate }}</h2>
 
   <div class="account-kbs-list">
-    <div class="account-kb" *ngFor="let kb of knowledgeBoxes" fxLayoutAlign="space-between center">
-      <a class="account-kb-title"
-         [class.disabled]="!kb.role_on_kb && !account.can_manage_account"
-         [routerLink]="kb.role_on_kb ? getKbUrl(account.slug, kb.slug!) : null"
-      >
+    <div
+      class="account-kb"
+      *ngFor="let kb of knowledgeBoxes"
+      fxLayoutAlign="space-between center">
+      <a
+        class="account-kb-title"
+        [class.disabled]="!kb.role_on_kb && !account.can_manage_account"
+        [routerLink]="kb.role_on_kb ? getKbUrl(account.slug, kb.slug!) : null">
         {{ kb.title }}
       </a>
-      <div fxLayout="row" fxLayoutAlign="start center">
+      <div
+        fxLayout="row"
+        fxLayoutAlign="start center">
         <ng-container *ngIf="account.can_manage_account">
-          <pa-button *ngIf="isUsersEnabled | async"
-                     class="icon-button"
-                     icon="add-user"
-                     aspect="basic"
-                     paTooltip="account.stash.users"
-                     (click)="manageKbUsers(kb)">
+          <pa-button
+            *ngIf="isUsersEnabled | async"
+            class="icon-button"
+            icon="add-user"
+            aspect="basic"
+            paTooltip="account.stash.users"
+            (click)="manageKbUsers(kb)">
             {{ 'account.stash.users' | translate }}
           </pa-button>
 
-          <pa-button *ngIf="!!kb.role_on_kb && isUsersEnabled | async"
-                     class="icon-button"
-                     icon="edit"
-                     aspect="basic"
-                     paTooltip="account.stash.edit"
-                     (click)="manageKb(kb.slug!)">
+          <pa-button
+            *ngIf="!!kb.role_on_kb && isUsersEnabled | async"
+            class="icon-button"
+            icon="edit"
+            aspect="basic"
+            paTooltip="account.stash.edit"
+            (click)="manageKb(kb.slug!)">
             {{ 'account.stash.edit' | translate }}
           </pa-button>
         </ng-container>
 
         <ng-container *ngIf="kb.role_on_kb === 'SOWNER' || account.can_manage_account">
-          <pa-button *ngIf="kb.state === 'PUBLISHED'"
-                     size="small"
-                     icon="lock"
-                     aspect="basic"
-                     iconAndText
-                     (click)="retireKb(kb)">
+          <pa-button
+            *ngIf="kb.state === 'PUBLISHED'"
+            size="small"
+            icon="lock"
+            aspect="basic"
+            iconAndText
+            (click)="retireKb(kb)">
             {{ 'account.stash.retire' | translate }}
           </pa-button>
 
-          <pa-button *ngIf="kb.state === 'PRIVATE'"
-                     size="small"
-                     icon="unlock"
-                     iconAndText
-                     (click)="publishKb(kb)">
+          <pa-button
+            *ngIf="kb.state === 'PRIVATE'"
+            size="small"
+            icon="unlock"
+            iconAndText
+            (click)="publishKb(kb)">
             {{ 'account.stash.publish' | translate }}
           </pa-button>
 
-          <pa-button size="small"
-                     icon="trash"
-                     kind="destructive"
-                     iconAndText
-                     (click)="deleteKb(kb)">
+          <pa-button
+            size="small"
+            icon="trash"
+            kind="destructive"
+            iconAndText
+            (click)="deleteKb(kb)">
             {{ 'generic.delete' | translate }}
           </pa-button>
         </ng-container>
@@ -64,17 +77,29 @@
     </div>
   </div>
 
-  <div *ngIf="canAddKb | async" class="mt-24" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="24px">
-    <div class="account-kbs-counter" *ngIf="knowledgeBoxes.length > 0">
+  <div
+    *ngIf="canAddKb | async"
+    class="mt-24"
+    fxLayout="row"
+    fxLayoutAlign="start center"
+    fxLayoutGap="24px">
+    <div
+      class="account-kbs-counter"
+      *ngIf="knowledgeBoxes.length > 0">
       {{ knowledgeBoxes.length }} {{ 'generic.of' | translate }} {{ maxKnowledgeBoxes }}
     </div>
 
-    <pa-button size="small" [disabled]="knowledgeBoxes.length >= maxKnowledgeBoxes" (click)="addKb(zones, account)">{{
-      'account.stash.add' | translate
-      }}</pa-button>
+    <pa-button
+      size="small"
+      [disabled]="knowledgeBoxes.length >= maxKnowledgeBoxes"
+      (click)="addKb(zones, account)">
+      {{ 'account.stash.add' | translate }}
+    </pa-button>
   </div>
 
-  <div class="account-kbs-empty" *ngIf="knowledgeBoxes.length === 0 && !(canAddKb | async)">
+  <div
+    class="account-kbs-empty"
+    *ngIf="knowledgeBoxes.length === 0 && !(canAddKb | async)">
     {{ 'stash.contact_admin' | translate }}
   </div>
 </div>
