--- a/apps/dashboard/src/app/account/account-nua/account-nua.component.html
+++ b/apps/dashboard/src/app/account/account-nua/account-nua.component.html
@@ -1,36 +1,43 @@
 <div class="account-nua">
   <h2>{{ 'account.nua_keys' | translate }}</h2>
   <div class="warning">{{ 'stash.service_access_description' | translate }}</div>
-  <div *ngIf="clients | async as clients" class="container">
+  <div
+    *ngIf="clients | async as clients"
+    class="container">
     <h3>{{ 'account.existing_keys' | translate }}</h3>
-    <div class="client" *ngFor="let client of clients">
+    <div
+      class="client"
+      *ngFor="let client of clients">
       <div class="title">
         {{ client.title }}
       </div>
       <div class="date">{{ client.created | formatDate }}</div>
       <div class="email">{{ client.contact }}</div>
       <div class="buttons">
-        <pa-button *ngIf="isNuaActivityEnabled | async"
-                   (click)="goToActivity(client)"
-                   aspect="basic"
-                   icon="activity-log"
-                   size="small"
-                   paTooltip="account.nua_key_activity"
-        >{{'account.nua_key_activity' | translate}}
+        <pa-button
+          *ngIf="isNuaActivityEnabled | async"
+          (click)="goToActivity(client)"
+          aspect="basic"
+          icon="activity-log"
+          size="small"
+          paTooltip="account.nua_key_activity">
+          {{ 'account.nua_key_activity' | translate }}
         </pa-button>
-        <pa-button (click)="askConfirmation(client)"
-                   aspect="basic"
-                   icon="refresh"
-                   size="small"
-                   paTooltip="account.generate_key"
-        >{{'account.generate_key' | translate}}
+        <pa-button
+          (click)="askConfirmation(client)"
+          aspect="basic"
+          icon="refresh"
+          size="small"
+          paTooltip="account.generate_key">
+          {{ 'account.generate_key' | translate }}
         </pa-button>
-        <pa-button (click)="deleteClient(client.client_id)"
-                   aspect="basic"
-                   icon="trash"
-                   size="small"
-                   paTooltip="generic.delete"
-        >{{'account.delete' | translate}}
+        <pa-button
+          (click)="deleteClient(client.client_id)"
+          aspect="basic"
+          icon="trash"
+          size="small"
+          paTooltip="generic.delete">
+          {{ 'account.delete' | translate }}
         </pa-button>
       </div>
     </div>
