--- a/apps/dashboard/src/app/account/account-nua/client-dialog/client-dialog.component.html
+++ b/apps/dashboard/src/app/account/account-nua/client-dialog/client-dialog.component.html
@@ -1,59 +1,79 @@
 <div class="client-dialog">
   <h1>{{ (editMode ? 'account.edit_nua_key' : 'account.create_nua_key') | translate }}</h1>
-  <pa-button class="close-button"
-             icon="cross"
-             aspect="basic"
-             (click)="close()">{{'generic.close' | translate}}</pa-button>
+  <pa-button
+    class="close-button"
+    icon="cross"
+    aspect="basic"
+    (click)="close()">
+    {{ 'generic.close' | translate }}
+  </pa-button>
 
-  <form [formGroup]="clientForm" (ngSubmit)="save()">
+  <form
+    [formGroup]="clientForm"
+    (ngSubmit)="save()">
     <div class="field-container">
-      <label class="title-xxs" for="client-title"> {{ 'account.nua_client' | translate }}* </label>
+      <label
+        class="title-xxs"
+        for="client-title">
+        {{ 'account.nua_client' | translate }}*
+      </label>
       <div>
-        <pa-input id="client-title"
-                  formControlName="title"
-                  [errorMessages]="validationMessages.title">
-        </pa-input>
+        <pa-input
+          id="client-title"
+          formControlName="title"
+          [errorMessages]="validationMessages.title"></pa-input>
       </div>
     </div>
 
     <div class="field-container">
-      <label class="title-xxs" for="client-email">
+      <label
+        class="title-xxs"
+        for="client-email">
         <span>{{ 'generic.email' | translate }}*</span>
-        <pa-icon class="info"
-                 name="info"
-                 size="small"
-                 paTooltip="account.email_info"></pa-icon>
+        <pa-icon
+          class="info"
+          name="info"
+          size="small"
+          paTooltip="account.email_info"></pa-icon>
       </label>
       <div>
-        <pa-input id="client-email"
-                  formControlName="email"
-                  [errorMessages]="validationMessages.email">
-        </pa-input>
+        <pa-input
+          id="client-email"
+          formControlName="email"
+          [errorMessages]="validationMessages.email"></pa-input>
       </div>
     </div>
 
     <div>
       <div class="field-container">
-        <label class="title-xxs" for="client-webhook">
+        <label
+          class="title-xxs"
+          for="client-webhook">
           <span>{{ 'account.nua_webhook' | translate }}</span>
-          <pa-icon class="info"
-                   name="info"
-                   size="small"
-                   paTooltip="account.nua_webhook.help"></pa-icon>
+          <pa-icon
+            class="info"
+            name="info"
+            size="small"
+            paTooltip="account.nua_webhook.help"></pa-icon>
         </label>
         <div>
-          <pa-input id="client-webhook"
-                    formControlName="webhook">
-          </pa-input>
+          <pa-input
+            id="client-webhook"
+            formControlName="webhook"></pa-input>
         </div>
       </div>
       <div class="webhook-hint">
         <ncom-hint label="Learn more about webhooks">
           <p>
-            If webhook is defined, anytime a new result is available, Nuclia will make a <code>POST</code> call to this
-            URL, sending the result as payload.
+            If webhook is defined, anytime a new result is available, Nuclia will make a
+            <code>POST</code>
+            call to this URL, sending the result as payload.
           </p>
-          <a href="https://docs.nuclia.dev/docs/understanding/intro#use-a-webhook" target="_new">Learn more</a>
+          <a
+            href="https://docs.nuclia.dev/docs/understanding/intro#use-a-webhook"
+            target="_new">
+            Learn more
+          </a>
         </ncom-hint>
       </div>
     </div>
@@ -61,17 +81,33 @@
     <div class="zone">
       <h2>{{ 'generic.zone' | translate }}</h2>
       <div class="mb-24">{{ 'account.db_zone_description' | translate }}</div>
-      <select stfSelect formControlName="zone" class="zone-select">
-        <option *ngFor="let zone of zones | async" [value]="zone.id">{{ zone.title }}</option>
+      <select
+        stfSelect
+        formControlName="zone"
+        class="zone-select">
+        <option
+          *ngFor="let zone of zones | async"
+          [value]="zone.id">
+          {{ zone.title }}
+        </option>
       </select>
     </div>
 
-    <footer class="mt-40" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="16px">
-      <pa-button aspect="basic"
-                 (click)="close()">
+    <footer
+      class="mt-40"
+      fxLayout="row"
+      fxLayoutAlign="center center"
+      fxLayoutGap="16px">
+      <pa-button
+        aspect="basic"
+        (click)="close()">
         {{ 'generic.cancel' | translate }}
       </pa-button>
-      <pa-button kind="primary" type="submit">{{ 'generic.save' | translate }}</pa-button>
+      <pa-button
+        kind="primary"
+        type="submit">
+        {{ 'generic.save' | translate }}
+      </pa-button>
     </footer>
   </form>
 </div>
