--- a/apps/dashboard/src/app/account/account-users/account-users.component.html
+++ b/apps/dashboard/src/app/account/account-users/account-users.component.html
@@ -1,55 +1,83 @@
-<div class="account-users" *ngIf="users">
+<div
+  class="account-users"
+  *ngIf="users">
   <h2>{{ 'account.users' | translate }}</h2>
 
   <div class="mb-28">
     <div class="users-amount">
-      {{ 'account.users_amount' | translate }} <strong>{{ users.length }}</strong>
+      {{ 'account.users_amount' | translate }}
+      <strong>{{ users.length }}</strong>
     </div>
-    <div class="users-left" *ngIf="account && account.max_users != null">
-      {{ 'account.users_left' | translate }} <strong>{{ account.max_users - account.current_users }}</strong>
+    <div
+      class="users-left"
+      *ngIf="account && account.max_users != null">
+      {{ 'account.users_left' | translate }}
+      <strong>{{ account.max_users - account.current_users }}</strong>
     </div>
   </div>
 
-  <div class="add-user" *ngIf="canAddUsers | async">
-    <div fxLayout="row" fxLayoutGap="10px" fxLayoutAlign="start center">
+  <div
+    class="add-user"
+    *ngIf="canAddUsers | async">
+    <div
+      fxLayout="row"
+      fxLayoutGap="10px"
+      fxLayoutAlign="start center">
       <input
         type="email"
         [formControl]="email"
         stfFilterInput
         [inputHeight]="32"
-        placeholder="{{ 'accounts.add_user_input' | translate }}"
-      />
-      <pa-button size="small"
-                 [disabled]="email.invalid"
-                 (click)="addUser()">
+        placeholder="{{ 'accounts.add_user_input' | translate }}" />
+      <pa-button
+        size="small"
+        [disabled]="email.invalid"
+        (click)="addUser()">
         {{ 'account.add_user' | translate }}
       </pa-button>
     </div>
   </div>
 
-  <table class="user-table mat-elevation-z4" mat-table [dataSource]="users">
+  <table
+    class="user-table mat-elevation-z4"
+    mat-table
+    [dataSource]="users">
     <ng-container matColumnDef="user">
-      <th mat-header-cell *matHeaderCellDef>
+      <th
+        mat-header-cell
+        *matHeaderCellDef>
         {{ 'generic.user' | translate }}
       </th>
-      <td mat-cell *matCellDef="let user">
+      <td
+        mat-cell
+        *matCellDef="let user">
         {{ user.name }} – {{ user.email }}
       </td>
     </ng-container>
 
     <ng-container matColumnDef="role">
-      <th class="user-role" mat-header-cell *matHeaderCellDef>
+      <th
+        class="user-role"
+        mat-header-cell
+        *matHeaderCellDef>
         {{ 'generic.role' | translate }}
       </th>
-      <td class="user-role" mat-cell *matCellDef="let user">
-        <nsi-dropdown-button size="small"
-                             aspect="basic"
-                             [popupRef]="roleDropdown"
-                             [disabled]="isItMe(user.id)">{{roleTranslations[user.role] | translate}}</nsi-dropdown-button>
+      <td
+        class="user-role"
+        mat-cell
+        *matCellDef="let user">
+        <nsi-dropdown-button
+          size="small"
+          aspect="basic"
+          [popupRef]="roleDropdown"
+          [disabled]="isItMe(user.id)">
+          {{ roleTranslations[user.role] | translate }}
+        </nsi-dropdown-button>
         <pa-dropdown #roleDropdown>
-          <pa-option *ngFor="let role of roleTranslations | keyvalue"
-                     [value]="role.key"
-                     (selectOption)="changeRole(user, role.key)">
+          <pa-option
+            *ngFor="let role of roleTranslations | keyvalue"
+            [value]="role.key"
+            (selectOption)="changeRole(user, role.key)">
             {{ role.value | translate }}
           </pa-option>
         </pa-dropdown>
@@ -57,18 +85,31 @@
     </ng-container>
 
     <ng-container matColumnDef="actions">
-      <th class="user-actions" mat-header-cell *matHeaderCellDef></th>
-      <td class="user-actions" mat-cell *matCellDef="let user">
-        <pa-button *ngIf="!isItMe(user.id)"
-                   aspect="basic"
-                   icon="trash"
-                   size="small"
-                   paTooltip="generic.delete"
-                   (click)="deleteUserConfirm(user)">{{'generic.delete' | translate}}</pa-button>
+      <th
+        class="user-actions"
+        mat-header-cell
+        *matHeaderCellDef></th>
+      <td
+        class="user-actions"
+        mat-cell
+        *matCellDef="let user">
+        <pa-button
+          *ngIf="!isItMe(user.id)"
+          aspect="basic"
+          icon="trash"
+          size="small"
+          paTooltip="generic.delete"
+          (click)="deleteUserConfirm(user)">
+          {{ 'generic.delete' | translate }}
+        </pa-button>
       </td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="columns"></tr>
-    <tr mat-row *matRowDef="let row; columns: columns"></tr>
+    <tr
+      mat-header-row
+      *matHeaderRowDef="columns"></tr>
+    <tr
+      mat-row
+      *matRowDef="let row; columns: columns"></tr>
   </table>
 </div>
