--- a/apps/dashboard/src/app/account/billing/payment/payment.component.html
+++ b/apps/dashboard/src/app/account/billing/payment/payment.component.html
@@ -1,4 +1,9 @@
 <div class="payment">
   <h2>{{ 'billing.payment_details' | translate }}</h2>
-  <pa-button iconAndText icon="plus" (click)="addCard()">{{ 'billing.add_card' | translate }}</pa-button>
+  <pa-button
+    iconAndText
+    icon="plus"
+    (click)="addCard()">
+    {{ 'billing.add_card' | translate }}
+  </pa-button>
 </div>
