--- a/apps/dashboard/src/app/account/billing/plans/plans.component.html
+++ b/apps/dashboard/src/app/account/billing/plans/plans.component.html
@@ -10,8 +10,12 @@
         <div>{{ 'billing.automatically_renewed' | translate }}</div>
       </div>
       <div>
-        <div *ngFor="let group of parameters" class="parameter-group">
-          <div *ngFor="let param of group" class="parameter">
+        <div
+          *ngFor="let group of parameters"
+          class="parameter-group">
+          <div
+            *ngFor="let param of group"
+            class="parameter">
             {{ 'billing.parameter.' + param | translate }}
           </div>
         </div>
@@ -21,37 +25,51 @@
     <div class="plan plan-teams">
       <div class="plan-header-teams">
         <h2 class="plan-title-teams">
-          <span
-            >{{ 'billing.upgrade_to' | translate }} <strong>{{ 'billing.teams_account' | translate }}</strong></span
-          >
+          <span>
+            {{ 'billing.upgrade_to' | translate }}
+            <strong>{{ 'billing.teams_account' | translate }}</strong>
+          </span>
         </h2>
         <div class="switch">
-          <button [class.active]="mode === 'monthly'" (click)="toggleMode()">
+          <button
+            [class.active]="mode === 'monthly'"
+            (click)="toggleMode()">
             {{ 'billing.monthly' | translate }}
           </button>
-          <button [class.active]="mode === 'annual'" (click)="toggleMode()">
+          <button
+            [class.active]="mode === 'annual'"
+            (click)="toggleMode()">
             {{ 'billing.annual' | translate }}
           </button>
         </div>
         <div class="total">{{ mode === 'monthly' ? teamPlan.monthly : teamPlan.annual }}€</div>
       </div>
       <div>
-        <div *ngFor="let group of parameters" class="parameter-group">
-          <div *ngFor="let param of group" class="parameter-value parameter-value-teams">
+        <div
+          *ngFor="let group of parameters"
+          class="parameter-group">
+          <div
+            *ngFor="let param of group"
+            class="parameter-value parameter-value-teams">
             <span *ngIf="teamPlan.parameters[param] as param">
               <span *ngIf="param.value !== 'True'">
                 {{ param.value }}
               </span>
-              <pa-icon *ngIf="param.value === 'True'" class="check-icon" name="check"></pa-icon>
+              <pa-icon
+                *ngIf="param.value === 'True'"
+                class="check-icon"
+                name="check"></pa-icon>
             </span>
             <span *ngIf="!teamPlan.parameters[param]">-</span>
-            <span class="overspend">{{
-              (teamPlan.parameters[param] && teamPlan.parameters[param].overspend) || ''
-            }}</span>
+            <span class="overspend">
+              {{ (teamPlan.parameters[param] && teamPlan.parameters[param].overspend) || '' }}
+            </span>
           </div>
         </div>
       </div>
-      <pa-button kind="primary" (click)="upgrade()">
+      <pa-button
+        kind="primary"
+        (click)="upgrade()">
         {{ 'billing.upgrade' | translate }}
       </pa-button>
     </div>
@@ -62,8 +80,12 @@
         <div class="total">{{ basicPlan.monthly }}€</div>
       </div>
       <div>
-        <div *ngFor="let group of parameters" class="parameter-group">
-          <div *ngFor="let param of group" class="parameter-value">
+        <div
+          *ngFor="let group of parameters"
+          class="parameter-group">
+          <div
+            *ngFor="let param of group"
+            class="parameter-value">
             <span>{{ (basicPlan.parameters[param] && basicPlan.parameters[param].value) || '-' }}</span>
           </div>
         </div>
