--- a/apps/dashboard/src/app/components/charts/empty-chart/empty-chart.component.html
+++ b/apps/dashboard/src/app/components/charts/empty-chart/empty-chart.component.html
@@ -1,5 +1,7 @@
 <div class="empty-chart">
-  <div class="empty-chart-row" *ngFor="let line of _numLines">
+  <div
+    class="empty-chart-row"
+    *ngFor="let line of _numLines">
     <div class="empty-chart-line"></div>
     <div class="empty-chart-axis"></div>
   </div>
