--- a/apps/dashboard/src/app/components/label/label-list/label-list.component.html
+++ b/apps/dashboard/src/app/components/label/label-list/label-list.component.html
@@ -1,6 +1,10 @@
-<div class="label-list" *ngIf="labelSelection && labelSelection.length > 0">
-  <pa-chip-closeable *ngFor="let label of labelSelection"
-                     [backgroundColor]="labelSets[label.labelset]?.color"
-                     (closed)="removeLabel(label)">{{label.label}}
+<div
+  class="label-list"
+  *ngIf="labelSelection && labelSelection.length > 0">
+  <pa-chip-closeable
+    *ngFor="let label of labelSelection"
+    [backgroundColor]="labelSets[label.labelset]?.color"
+    (closed)="removeLabel(label)">
+    {{ label.label }}
   </pa-chip-closeable>
 </div>
