--- a/apps/dashboard/src/app/components/messages/message-modal.component.html
+++ b/apps/dashboard/src/app/components/messages/message-modal.component.html
@@ -2,7 +2,10 @@
   <pa-modal-title>{{ data?.title | translate }}</pa-modal-title>
   <pa-modal-content [innerHtml]="data?.['message']"></pa-modal-content>
   <pa-modal-footer>
-    <pa-button kind="primary"
-               (click)="modal.close()">{{ 'pastanaga.confirm' | translate}}</pa-button>
+    <pa-button
+      kind="primary"
+      (click)="modal.close()">
+      {{ 'pastanaga.confirm' | translate }}
+    </pa-button>
   </pa-modal-footer>
 </pa-modal-dialog>
