--- a/apps/dashboard/src/app/components/stash-navbar/stash-navbar.component.html
+++ b/apps/dashboard/src/app/components/stash-navbar/stash-navbar.component.html
@@ -1,60 +1,71 @@
-<div class="stash-navbar"
-     [class.is-unfolded]="isUnfolded">
+<div
+  class="stash-navbar"
+  [class.is-unfolded]="isUnfolded">
   <div class="navbar-scroll-container">
-    <div *ngIf="!(inAccount | async)"
-         class="navbar-content">
+    <div
+      *ngIf="!(inAccount | async)"
+      class="navbar-content">
       <div class="nav-group">
-        <div class="group-items"
-             tourAnchor="step5">
-          <a class="nav-link"
-             [class.disabled]="!(isAdminOrContrib | async)"
-             (click)="createNewLink()">
+        <div
+          class="group-items"
+          tourAnchor="step5">
+          <a
+            class="nav-link"
+            [class.disabled]="!(isAdminOrContrib | async)"
+            (click)="createNewLink()">
             <pa-icon name="link"></pa-icon>
             <span class="nav-link-title">{{ 'stash.side.link' | translate }}</span>
           </a>
-          <a class="nav-link"
-             [class.disabled]="!(isAdminOrContrib | async)"
-             (click)="uploadNewFiles(false)">
+          <a
+            class="nav-link"
+            [class.disabled]="!(isAdminOrContrib | async)"
+            (click)="uploadNewFiles(false)">
             <pa-icon name="file"></pa-icon>
             <span class="nav-link-title">{{ 'stash.side.file' | translate }}</span>
           </a>
-          <a *ngIf="isUploadFolderEnabled | async"
-             class="nav-link"
-             [class.disabled]="!(isAdminOrContrib | async)"
-             (click)="uploadNewFiles(true)">
+          <a
+            *ngIf="isUploadFolderEnabled | async"
+            class="nav-link"
+            [class.disabled]="!(isAdminOrContrib | async)"
+            (click)="uploadNewFiles(true)">
             <pa-icon name="folder"></pa-icon>
             <span class="nav-link-title">{{ 'stash.side.folder' | translate }}</span>
           </a>
         </div>
       </div>
       <div class="nav-group">
-        <div class="group-items"
-             tourAnchor="step6">
-          <a *ngIf="isActivityEnabled | async"
-             [routerLink]="kbUrl + '/activity'"
-             routerLinkActive="active"
-             class="nav-link"
-             [class.disabled]="!(isAdminOrContrib | async)">
+        <div
+          class="group-items"
+          tourAnchor="step6">
+          <a
+            *ngIf="isActivityEnabled | async"
+            [routerLink]="kbUrl + '/activity'"
+            routerLinkActive="active"
+            class="nav-link"
+            [class.disabled]="!(isAdminOrContrib | async)">
             <pa-icon name="activity-log"></pa-icon>
             <span class="nav-link-title">{{ 'stash.side.activity' | translate }}</span>
           </a>
-          <a [routerLink]="kbUrl + '/resources'"
-             routerLinkActive="active"
-             class="nav-link">
+          <a
+            [routerLink]="kbUrl + '/resources'"
+            routerLinkActive="active"
+            class="nav-link">
             <pa-icon name="list"></pa-icon>
             <span class="nav-link-title">{{ 'stash.side.list' | translate }}</span>
           </a>
-          <a *ngIf="isOntologiesEnabled | async"
-             [routerLink]="kbUrl + '/ontologies'"
-             routerLinkActive="active"
-             class="nav-link">
+          <a
+            *ngIf="isOntologiesEnabled | async"
+            [routerLink]="kbUrl + '/ontologies'"
+            routerLinkActive="active"
+            class="nav-link">
             <pa-icon name="label"></pa-icon>
             <span class="nav-link-title">{{ 'resource.classification' | translate }}</span>
           </a>
-          <a *ngIf="isEntitiesEnabled | async"
-             [routerLink]="[kbUrl + '/entities']"
-             routerLinkActive="active"
-             class="nav-link">
+          <a
+            *ngIf="isEntitiesEnabled | async"
+            [routerLink]="[kbUrl + '/entities']"
+            routerLinkActive="active"
+            class="nav-link">
             <pa-icon name="search-plus"></pa-icon>
             <span class="nav-link-title">{{ 'generic.insights' | translate }}</span>
           </a>
@@ -63,55 +74,64 @@
 
       <div class="nav-group">
         <div class="group-items">
-          <a [routerLink]="kbUrl + '/manage'"
-             routerLinkActive="active"
-             class="nav-link"
-             [class.disabled]="!(isAdminOrContrib | async)">
+          <a
+            [routerLink]="kbUrl + '/manage'"
+            routerLinkActive="active"
+            class="nav-link"
+            [class.disabled]="!(isAdminOrContrib | async)">
             <pa-icon name="settings"></pa-icon>
             <span class="nav-link-title">{{ 'stash.side.settings' | translate }}</span>
           </a>
         </div>
-        <div *ngIf="isTrainingEnabled | async"
-             class="group-items"
-             tourAnchor="step7">
-          <a [routerLink]="kbUrl + '/processes'"
-             routerLinkActive="active"
-             class="nav-link"
-             [class.disabled]="!(isAdminOrContrib | async)">
+        <div
+          *ngIf="isTrainingEnabled | async"
+          class="group-items"
+          tourAnchor="step7">
+          <a
+            [routerLink]="kbUrl + '/processes'"
+            routerLinkActive="active"
+            class="nav-link"
+            [class.disabled]="!(isAdminOrContrib | async)">
             <pa-icon name="submenu"></pa-icon>
             <span class="nav-link-title">{{ 'stash.side.trainings' | translate }}</span>
           </a>
         </div>
         <ng-container *ngIf="isAccountManager | async">
-          <div *ngIf="isUsersEnabled | async"
-               class="group-items"
-               tourAnchor="step9">
-            <a [routerLink]="kbUrl + '/users'"
-               routerLinkActive="active"
-               class="nav-link">
+          <div
+            *ngIf="isUsersEnabled | async"
+            class="group-items"
+            tourAnchor="step9">
+            <a
+              [routerLink]="kbUrl + '/users'"
+              routerLinkActive="active"
+              class="nav-link">
               <pa-icon name="users"></pa-icon>
               <span class="nav-link-title">{{ 'stash.side.users' | translate }}</span>
             </a>
           </div>
         </ng-container>
-        <div *ngIf="isWidgetsEnabled | async"
-             class="group-items"
-             tourAnchor="step8">
-          <a [routerLink]="kbUrl + '/widgets'"
-             routerLinkActive="active"
-             class="nav-link"
-             [class.disabled]="!(isAdminOrContrib | async)">
+        <div
+          *ngIf="isWidgetsEnabled | async"
+          class="group-items"
+          tourAnchor="step8">
+          <a
+            [routerLink]="kbUrl + '/widgets'"
+            routerLinkActive="active"
+            class="nav-link"
+            [class.disabled]="!(isAdminOrContrib | async)">
             <pa-icon name="widget"></pa-icon>
             <span class="nav-link-title">{{ 'stash.side.widgets' | translate }}</span>
           </a>
         </div>
         <ng-container *ngIf="isAccountManager | async">
-          <div *ngIf="isAPIKeysEnabled | async"
-               class="group-items"
-               tourAnchor="step10">
-            <a [routerLink]="kbUrl + '/keys'"
-               routerLinkActive="active"
-               class="nav-link">
+          <div
+            *ngIf="isAPIKeysEnabled | async"
+            class="group-items"
+            tourAnchor="step10">
+            <a
+              [routerLink]="kbUrl + '/keys'"
+              routerLinkActive="active"
+              class="nav-link">
               <pa-icon name="lock-off"></pa-icon>
               <span class="nav-link-title">{{ 'stash.side.api_keys' | translate }}</span>
             </a>
@@ -120,66 +140,76 @@
       </div>
       <div class="nav-group dark">
         <div class="group-items">
-          <a [routerLink]="(accountUrl | async) + '/home'"
-             class="nav-link"
-             routerLinkActive="active"
-             [class.disabled]="!(isAccountManager | async)">
+          <a
+            [routerLink]="(accountUrl | async) + '/home'"
+            class="nav-link"
+            routerLinkActive="active"
+            [class.disabled]="!(isAccountManager | async)">
             <pa-icon name="account"></pa-icon>
             <span class="nav-link-title">{{ 'account.manage' | translate }}</span>
           </a>
         </div>
       </div>
     </div>
-    <div *ngIf="(inAccount | async) && (isAccountManager | async)"
-         class="navbar-content dark">
+    <div
+      *ngIf="(inAccount | async) && (isAccountManager | async)"
+      class="navbar-content dark">
       <div class="nav-group">
         <div class="group-items">
-          <a [routerLink]="(accountUrl | async) + '/settings'"
-             routerLinkActive="active"
-             class="nav-link">
+          <a
+            [routerLink]="(accountUrl | async) + '/settings'"
+            routerLinkActive="active"
+            class="nav-link">
             <pa-icon name="settings"></pa-icon>
             <span class="nav-link-title">{{ 'account.settings' | translate }}</span>
           </a>
         </div>
         <div class="group-items">
-          <a [routerLink]="(accountUrl | async) + '/kbs'"
-             routerLinkActive="active"
-             class="nav-link">
+          <a
+            [routerLink]="(accountUrl | async) + '/kbs'"
+            routerLinkActive="active"
+            class="nav-link">
             <pa-icon name="knowledge-box"></pa-icon>
             <span class="nav-link-title">{{ 'account.knowledgeboxes' | translate }}</span>
           </a>
         </div>
         <div class="group-items">
-          <a [routerLink]="(accountUrl | async) + '/users'"
-             routerLinkActive="active"
-             class="nav-link">
+          <a
+            [routerLink]="(accountUrl | async) + '/users'"
+            routerLinkActive="active"
+            class="nav-link">
             <pa-icon name="users"></pa-icon>
             <span class="nav-link-title">{{ 'account.users' | translate }}</span>
           </a>
         </div>
         <div class="group-items">
-          <a [routerLink]="(accountUrl | async) + '/nua'"
-             routerLinkActive="active"
-             class="nav-link">
+          <a
+            [routerLink]="(accountUrl | async) + '/nua'"
+            routerLinkActive="active"
+            class="nav-link">
             <pa-icon name="key"></pa-icon>
             <span class="nav-link-title">{{ 'account.nua_keys' | translate }}</span>
           </a>
         </div>
-        <div *ngIf="isBillingEnabled | async"
-             class="group-items">
-          <a [routerLink]="(accountUrl | async) + '/billing'"
-             routerLinkActive="active"
-             class="nav-link">
+        <div
+          *ngIf="isBillingEnabled | async"
+          class="group-items">
+          <a
+            [routerLink]="(accountUrl | async) + '/billing'"
+            routerLinkActive="active"
+            class="nav-link">
             <pa-icon name="payment"></pa-icon>
             <span class="nav-link-title">{{ 'account.billing' | translate }}</span>
           </a>
         </div>
       </div>
-      <div class="nav-group"
-           *ngIf="kb | async">
+      <div
+        class="nav-group"
+        *ngIf="kb | async">
         <div class="group-items">
-          <a [routerLink]="kbUrl"
-             class="nav-link">
+          <a
+            [routerLink]="kbUrl"
+            class="nav-link">
             <pa-icon name="home"></pa-icon>
             <span class="nav-link-title">{{ 'generic.back' | translate }}</span>
           </a>
