--- a/apps/dashboard/src/app/components/topbar/kb-switch/kb-switch.component.html
+++ b/apps/dashboard/src/app/components/topbar/kb-switch/kb-switch.component.html
@@ -1,21 +1,27 @@
-<nsi-dropdown-button size="small"
-                     aspect="basic"
-                     [icon]="(kb | async)?.state !== 'PUBLISHED' ? 'lock' : undefined"
-                     [popupRef]="kbSwitch">
+<nsi-dropdown-button
+  size="small"
+  aspect="basic"
+  [icon]="(kb | async)?.state !== 'PUBLISHED' ? 'lock' : undefined"
+  [popupRef]="kbSwitch">
   {{ (kb | async)?.title }}
 </nsi-dropdown-button>
 
 <pa-dropdown #kbSwitch>
-  <ng-container *ngFor="let kb of knowledgeBoxes | async; let last=last">
-    <pa-option [disabled]="!kb.role_on_kb"
-               iconOnRight
-               [paTooltip]="kb.title"
-               [icon]="kb.state === 'PUBLISHED' ? '' : 'lock'"
-               (selectOption)="goToKb(kb)">{{ kb.title }}</pa-option>
+  <ng-container *ngFor="let kb of knowledgeBoxes | async; let last = last">
+    <pa-option
+      [disabled]="!kb.role_on_kb"
+      iconOnRight
+      [paTooltip]="kb.title"
+      [icon]="kb.state === 'PUBLISHED' ? '' : 'lock'"
+      (selectOption)="goToKb(kb)">
+      {{ kb.title }}
+    </pa-option>
     <pa-separator *ngIf="!last || (last && (showDemo | async))"></pa-separator>
   </ng-container>
-  <pa-option *ngIf="showDemo | async"
-             class="demo-kb"
-             (selectOption)="goToDemo()">Demo
+  <pa-option
+    *ngIf="showDemo | async"
+    class="demo-kb"
+    (selectOption)="goToDemo()">
+    Demo
   </pa-option>
 </pa-dropdown>
