--- a/apps/dashboard/src/app/entities/entity-dialog/entity-dialog.component.html
+++ b/apps/dashboard/src/app/entities/entity-dialog/entity-dialog.component.html
@@ -1,14 +1,17 @@
 <div class="entity-dialog">
-  <pa-button class="close-button"
-             icon="cross"
-             aspect="basic"
-             (click)="close()">{{'generic.close' | translate}}</pa-button>
+  <pa-button
+    class="close-button"
+    icon="cross"
+    aspect="basic"
+    (click)="close()">
+    {{ 'generic.close' | translate }}
+  </pa-button>
 
   <div class="mb-44">
-    <app-group-select [(selected)]="group"
-                      [groups]="(groups$ | async) || {}"
-                      [disabled]="mode !== 'add'">
-    </app-group-select>
+    <app-group-select
+      [(selected)]="group"
+      [groups]="(groups$ | async) || {}"
+      [disabled]="mode !== 'add'"></app-group-select>
   </div>
 
   <ng-container *ngIf="mode === 'view'">
@@ -20,31 +23,59 @@
       otras atracciones importantes, se incluyen el Teatro Colón, un lujoso teatro de ópera de 1908 con cerca de 2,500
       asientos, y el moderno museo MALBA, que exhibe arte latinoamericano.
     </div>
-    <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="12px" class="mt-80">
-      <pa-button aspect="basic"
-                 (click)="close()">{{ 'generic.close' | translate }}</pa-button>
+    <div
+      fxLayout="row"
+      fxLayoutAlign="center center"
+      fxLayoutGap="12px"
+      class="mt-80">
+      <pa-button
+        aspect="basic"
+        (click)="close()">
+        {{ 'generic.close' | translate }}
+      </pa-button>
 
-      <pa-button kind="inverted"
-                 (click)="edit()">{{ 'generic.edit' | translate }}</pa-button>
+      <pa-button
+        kind="inverted"
+        (click)="edit()">
+        {{ 'generic.edit' | translate }}
+      </pa-button>
     </div>
   </ng-container>
 
   <ng-container *ngIf="mode === 'edit' || mode === 'add'">
-    <h2 class="mb-16" *ngIf="data.entity">{{ data.entity.value }}</h2>
-    <form [formGroup]="entityForm"
-          (submit)="save()">
-      <div class="mb-8" *ngIf="!data.entity">
-        <pa-input formControlName="name"
-                  [errorMessages]="validationMessages.name">
+    <h2
+      class="mb-16"
+      *ngIf="data.entity">
+      {{ data.entity.value }}
+    </h2>
+    <form
+      [formGroup]="entityForm"
+      (submit)="save()">
+      <div
+        class="mb-8"
+        *ngIf="!data.entity">
+        <pa-input
+          formControlName="name"
+          [errorMessages]="validationMessages.name">
           {{ 'entity.entity_name' | translate }}
         </pa-input>
       </div>
     </form>
-    <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="16px" class="mt-32">
-      <pa-button aspect="basic"
-                 (click)="close()">{{ 'generic.cancel' | translate }}</pa-button>
-      <pa-button kind="primary"
-                 (click)="save()">{{ 'generic.save' | translate }}</pa-button>
+    <div
+      fxLayout="row"
+      fxLayoutAlign="center center"
+      fxLayoutGap="16px"
+      class="mt-32">
+      <pa-button
+        aspect="basic"
+        (click)="close()">
+        {{ 'generic.cancel' | translate }}
+      </pa-button>
+      <pa-button
+        kind="primary"
+        (click)="save()">
+        {{ 'generic.save' | translate }}
+      </pa-button>
     </div>
   </ng-container>
 </div>
