--- a/apps/dashboard/src/app/knowledge-box/upload-bar/upload-bar.component.html
+++ b/apps/dashboard/src/app/knowledge-box/upload-bar/upload-bar.component.html
@@ -1,22 +1,41 @@
-<div class="upload-bar" fxLayout="flex" fxLayoutAlign="start center">
-  <div class="upload-bar-title" fxFlex="0 0 auto" [innerHTML]="'upload.uploading_files' | translate"></div>
+<div
+  class="upload-bar"
+  fxLayout="flex"
+  fxLayoutAlign="start center">
+  <div
+    class="upload-bar-title"
+    fxFlex="0 0 auto"
+    [innerHTML]="'upload.uploading_files' | translate"></div>
 
-  <div class="upload-bar-progress" fxFlex="1 1 auto">
-    <stf-progress-bar track="white" [progress]="progress | async"></stf-progress-bar>
+  <div
+    class="upload-bar-progress"
+    fxFlex="1 1 auto">
+    <stf-progress-bar
+      track="white"
+      [progress]="progress | async"></stf-progress-bar>
   </div>
 
-  <div class="upload-bar-percentage" fxFlex="0 0 auto">
-    <strong>{{ progress | async }}%</strong> {{ 'upload.completed' | translate }}
+  <div
+    class="upload-bar-percentage"
+    fxFlex="0 0 auto">
+    <strong>{{ progress | async }}%</strong>
+    {{ 'upload.completed' | translate }}
   </div>
 
-  <pa-button kind="inverted"
-             size="small"
-             (click)="checkFiles()">{{ 'upload.check_files' | translate }}</pa-button>
+  <pa-button
+    kind="inverted"
+    size="small"
+    (click)="checkFiles()">
+    {{ 'upload.check_files' | translate }}
+  </pa-button>
 
-  <pa-button class="close-button"
-             icon="cross"
-             kind="inverted"
-             aspect="basic"
-             size="small"
-             (click)="close()">{{'generic.close' | translate}}</pa-button>
+  <pa-button
+    class="close-button"
+    icon="cross"
+    kind="inverted"
+    aspect="basic"
+    size="small"
+    (click)="close()">
+    {{ 'generic.close' | translate }}
+  </pa-button>
 </div>
