--- a/apps/dashboard/src/app/resources/edit/profile/profile.component.html
+++ b/apps/dashboard/src/app/resources/edit/profile/profile.component.html
@@ -1,19 +1,32 @@
 <h2>{{ 'resource.profile' | translate }}</h2>
-<form [formGroup]="form" (ngSubmit)="save()">
+<form
+  [formGroup]="form"
+  (ngSubmit)="save()">
   <div>
-    <label class="title-xxs" for="title">{{ 'resource.title' | translate }}</label>
-    <pa-input id="title" formControlName="title"></pa-input>
+    <label
+      class="title-xxs"
+      for="title">
+      {{ 'resource.title' | translate }}
+    </label>
+    <pa-input
+      id="title"
+      formControlName="title"></pa-input>
   </div>
   <div>
     <label for="authors">{{ 'resource.authorship' | translate }}</label>
-    <pa-input id="authors" formControlName="authors"></pa-input>
+    <pa-input
+      id="authors"
+      formControlName="authors"></pa-input>
   </div>
   <div>
     <div>
       <label for="summary">{{ 'resource.summary' | translate }}</label>
       <div class="body-xs">{{ 'resource.summary.help' | translate }}</div>
     </div>
-    <pa-textarea id="summary" formControlName="summary" rows="3"></pa-textarea>
+    <pa-textarea
+      id="summary"
+      formControlName="summary"
+      rows="3"></pa-textarea>
   </div>
   <div>
     <div>
@@ -21,34 +34,45 @@
       <div class="body-xs">{{ 'resource.thumbnail.help' | translate }}</div>
     </div>
     <div class="thumbnails-container">
-      <pa-radio-group name="resource-thumbnail"
-                      id="radio-group-resource-thumbnail"
-                      formControlName="thumbnail" >
+      <pa-radio-group
+        name="resource-thumbnail"
+        id="radio-group-resource-thumbnail"
+        formControlName="thumbnail">
         <div class="drop-container">
-          <div class="drop-image-area"
-               [class.file-over]="hasBaseDropZoneOver"
-               stfFileDrop
-               fileDropAccept="image/*"
-               (fileOver)="fileOverBase($event)"
-               (atFileDrop)="uploadThumbnail($event)"
-               (click)="chooseFiles($event)">
-            <span *ngIf="!isUploading">{{'resource.thumbnail.drop' | translate}}</span>
-            <nsi-spinner *ngIf="isUploading" size="small"></nsi-spinner>
+          <div
+            class="drop-image-area"
+            [class.file-over]="hasBaseDropZoneOver"
+            stfFileDrop
+            fileDropAccept="image/*"
+            (fileOver)="fileOverBase($event)"
+            (atFileDrop)="uploadThumbnail($event)"
+            (click)="chooseFiles($event)">
+            <span *ngIf="!isUploading">{{ 'resource.thumbnail.drop' | translate }}</span>
+            <nsi-spinner
+              *ngIf="isUploading"
+              size="small"></nsi-spinner>
           </div>
           <div class="radio-placeholder"></div>
 
-          <input #thumbnailFileInput
-                 type="file"
-                 accept="image/*"
-                 stfFileSelect
-                 multiple
-                 hidden
-                 (atFileSelect)="uploadThumbnail($event)" />
+          <input
+            #thumbnailFileInput
+            type="file"
+            accept="image/*"
+            stfFileSelect
+            multiple
+            hidden
+            (atFileSelect)="uploadThumbnail($event)" />
         </div>
-        <div *ngFor="let thumb of (thumbnails | async); let index=index; let count=count; trackBy: trackByUri">
+        <div *ngFor="let thumb of thumbnails | async; let index = index; let count = count; trackBy: trackByUri">
           <div class="radio-thumbnail-container">
-            <img class="resource-thumbnail" [src]="thumb.blob" alt="thumbnail {{index}}">
-            <pa-radio *ngIf="count > 1" [value]="thumb.uri" [ariaLabel]="'Thumbnail ' + index"></pa-radio>
+            <img
+              class="resource-thumbnail"
+              [src]="thumb.blob"
+              alt="thumbnail {{ index }}" />
+            <pa-radio
+              *ngIf="count > 1"
+              [value]="thumb.uri"
+              [ariaLabel]="'Thumbnail ' + index"></pa-radio>
           </div>
         </div>
       </pa-radio-group>
@@ -58,28 +82,40 @@
   <div class="classification-container">
     <label>{{ 'resource.classification' | translate }}</label>
     <div>
-      <app-label-field [selection]="currentLabels"
-                       (selectionChange)="updateLabels($event)"></app-label-field>
+      <app-label-field
+        [selection]="currentLabels"
+        (selectionChange)="updateLabels($event)"></app-label-field>
     </div>
   </div>
 
   <div class="form-buttons">
-    <pa-button kind="primary"
-               [disabled]="!form.valid || form.pristine"
-               (click)="save()">{{ 'generic.save' | translate }}</pa-button>
+    <pa-button
+      kind="primary"
+      [disabled]="!form.valid || form.pristine"
+      (click)="save()">
+      {{ 'generic.save' | translate }}
+    </pa-button>
 
-    <pa-button aspect="basic"
-               [disabled]="form.pristine"
-               (click)="cancel()">{{ 'generic.cancel' | translate }}</pa-button>
+    <pa-button
+      aspect="basic"
+      [disabled]="form.pristine"
+      (click)="cancel()">
+      {{ 'generic.cancel' | translate }}
+    </pa-button>
   </div>
 </form>
 
-<ncom-hint label="How to modify a resource with the API"
-           inverted
-           [values]="hintValues | async">
+<ncom-hint
+  label="How to modify a resource with the API"
+  inverted
+  [values]="hintValues | async">
   <pre><code class="highlight">curl $$RESOURCE$$ \
  -X PATCH \
  -H "authorization: Bearer $$AUTH_TOKEN$$" \
  --data-raw '$$DATA$$'</code></pre>
-  <a href="https://docs.nuclia.dev/docs/api#operation/Modify_Resource_kb__kbid__resource__rid__patch" target="_new">Learn more</a>
+  <a
+    href="https://docs.nuclia.dev/docs/api#operation/Modify_Resource_kb__kbid__resource__rid__patch"
+    target="_new">
+    Learn more
+  </a>
 </ncom-hint>
