--- a/apps/dashboard/src/app/widgets/widgets.component.html
+++ b/apps/dashboard/src/app/widgets/widgets.component.html
@@ -1,4 +1,7 @@
-<stf-section-navbar [title]="'stash.widgets'" [routes]="(routes | async) || []" [hasInnerRoutes]="true">
+<stf-section-navbar
+  [title]="'stash.widgets'"
+  [routes]="(routes | async) || []"
+  [hasInnerRoutes]="true">
   <stf-section-navbar-body class="widgets-sections">
     <router-outlet></router-outlet>
   </stf-section-navbar-body>
